# AIgarMIC

./: .coveragerc  .gitignore  .readthedocs.yaml  2023-03-07.csv  2023-03-17.csv  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Plate1_2023-03-21.csv  README.md  clean_up_annotations.py  demo.py  environment.yaml  flomoxef_batch1.csv  grid_template.xcf  main.py  manual_annotator.py  mer_batch2_run1.csv  model.py  nn_design.py  paper.bib  paper.md  plate.py  process_plate_image.py  pylintrc  pyproject.toml  rename_images.py  requirements.txt  sitecustomize.py  test.py  test_dict.csv  train_binary_model.py  train_model.py  train_modular.py  utils.py  vo_final.csv  vo_final2.csv
.github/workflows/: draft-pdf.yml  publish.yml  pytest.yml
deprecated/: train_binary_model.py  train_model.py
docs/source/: about.rst  advanced.rst  aigarmic.rst  api.rst  command_line_interface.rst  conf.py  developer.rst  index.rst  installation.rst  introduction.rst  minimal.rst  modules.rst  quickstart.rst  requirements.txt  technical.rst
src/aigarmic/: __init__.py  _img_utils.py  _nn_design.py  clean_up_annotations.py  draw_model.py  file_handlers.py  img_utils.py  main.py  manual_annotator.py  model.py  model_performance.py  nn_design.py  plate.py  predict.py  process_plate_image.py  rename_images.py  train.py  train_modular.py  utils.py
tests/: conftest.py  test_file_handlers.py  test_img_utils.py  test_main.py  test_model.py  test_plate.py  test_process_plate_image.py  test_train.py  test_utils.py
